# python-import-policies

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.gitlab/: qa.yml  release.yml  security.yml  test.yml
import_policies/: contracts.py
mk/: local.mk  qa.mk  test.mk
qa/: .bandit.ini  .coveragerc  .docstr.yaml  .flake8.cfg  .import-rules.ini  .mypy.ini  .skjold.toml
tests/: __init__.py  allow-rules.ini  disallow-rules.ini  test_imports.py
