[tool.poetry]
name = "python-import-policies"
version = "1.1.2"
description = "Import Policies"
license = "MIT"
authors = ["Yunier Rojas <yunier.rojas@gmail.com>"]
readme = "README.md"
packages = [{ include = "import_policies" }]
maintainers = [
    "Yunier Rojas García <yunier.rojas@gmail.com>",
]
repository = "https://github.com/yunier-rojas/python-import-policies"
keywords = ["python", "import", "policy"]
classifiers = [
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
import-linter = "^2.9"


[tool.poetry.group.local.dependencies]
skjold = "^0.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = []
branch = "main"
build_command = "pip install poetry && poetry build"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.remote]
type = "github"
